apps/base/infra-ntfy/deploy/ntfy-alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-alertmanager
spec:
  ports:
    - port: 8080
      name: http
      targetPort: http
  selector:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/component: ntfy-alertmanager
