apps/base/infra-ntfy/deploy/ntfy-alertmanager/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-ntfy-alertmanager
spec:
  policyTypes: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: ntfy
      app.kubernetes.io/component: ntfy-alertmanager

  ingress:
    - ports:
        - port: http
      from:
        # Allow from alertmanager
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: alertmanager
              app.kubernetes.io/component: alertmanager
              app.kubernetes.io/instance: k8s
